# Ctrl-World

./: .gitignore  INSTALL.md  MANIFEST.in  config.py  pyproject.toml  setup.py
dataset/: __init__.py  dataset_droid_exp33.py  dataset_orca.py
dataset_example/: __init__.py  extract_latent_orca.py
dataset_meta_info/: __init__.py  create_meta_info_orca.py  get_pca.py  get_statistics_from_data.py
experiments/: base_config.yaml
experiments/action_space_test/: open_close_all_finger_joints.yaml  open_close_scalar_value.yaml
experiments/fixed_ee_vs_fixed_finger/: fixed_hand_joints.yaml
experiments/hand_mask_as_action_test/: hand_mask_dino_initial_test.yaml  hand_mask_dino_initial_test_moving_ee.yaml
experiments/hand_mask_prediction_tests/: hand_mask_prediction_using_relative_ee_joint_fingers.yaml
experiments/test_action_encoder_size/: action_encoder_size_test_1024_random.yaml  action_encoder_size_test_1024_sine.yaml  action_encoder_size_test_2x1024_random.yaml  action_encoder_size_test_2x1024_sine.yaml  action_encoder_size_test_4x1024_random.yaml  action_encoder_size_test_4x1024_sine.yaml
experiments/video_frequency_test/: high_res_10fps.yaml  (+5 more)
models/: ctrl_world.py  unet_spatio_temporal_condition.py
scripts/: __init__.py  experiment_manager.py  get_heatmap_plots_from_generated_video_samples.py  inference_wm.py  run_dataset_meta_info.sh  run_inference_wm.sh  run_orca_pipeline.sh  run_training.sh  train_wm.py  wm_benchmarking.py
tests/: read_pt_files.py  test_dino_visual_encoder.py  test_object_hand_centric_objective.py
utils/: config_loader.py
(+8 files in other folders)
