[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ctrl-world"
dynamic = ["version"]
description = "A world model for robotic control and manipulation"
readme = "readme.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}  # Update with your info
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/riccardofeingold/Ctrl-World"
Repository = "https://github.com/riccardofeingold/Ctrl-World"

[tool.setuptools]
packages = ["models", "dataset", "dataset_example", "dataset_meta_info"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]
